--- a/pages/team.html
+++ b/pages/team.html
@@ -55,7 +55,7 @@
                 <div class="col-3">
                     <img src="../images/marie.jpg" class="img-fluid"/>
                     <h3>Marie Neubrander</h3>
-                    <p>{error: description for "Marie Neubrander" not yet submitted}</p>
+                    <p>Did someone say PhD???</p>
                 </div>
                 <div class="col-3">
                     <img src="../images/myles.jpg" class="img-fluid"/>
