--- a/index.html
+++ b/index.html
@@ -57,25 +57,40 @@
               Temporary Emergency Services Inc. (TES) is a nonprofit organization dedicated to helping individuals and families in crisis situations
           </h3>
           <h3 class=" bottom-buffer">
-            TES Verify Enables:
+            TES Verify is an app built to allow volunteers and managers to keep track of volunteer hours, designed with 
+            ease of use and flexibility in mind
           </h3>
+          <h3 class="bottom-buffer" style="display:block">
+            TES Verify features include:
+          </h3>
+          <ul style="display:block">
+            <li class="list-group-item list-group-item-action"><h4>Easy clock-in/out with QR code</h4></li>
+            <li class="list-group-item list-group-item-action"><h4>Volunteer applications and manager approval</h4></li>
+            <li class="list-group-item list-group-item-action"><h4>Search capabilities for applications and clock-ins/outs</h4></li>
+            <li class="list-group-item list-group-item-action"><h4>CSV file exports for hours worked</h4></li>
+            <li class="list-group-item list-group-item-action"><h4>Profile image uploads</h4></li>
+          </ul>
+          <div class="embed-responsive embed-responsive-16by9">
+            <iframe width="500px" height="500px" src="https://www.youtube.com/embed/QN65Ra-vPVw" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          </div>
+           
           <div class="row">
-            <div class="col-3">
+            <!-- <div class="col-3">
               <img src="images/sheet.png" class="img-fluid"/>
-              <h5>Check-In/Check-Out</h5>
-            </div>
-            <div class="col-3">
+              <h5>Clock-in/Clock-Out</h5>
+            </div> -->
+            <!-- <div class="col-3">
               <img src="images/clipboard-checkmark.png" class="img-fluid"/>
               <h5>Identity Verification</h5>
-            </div>
-            <div class="col-3">
+            </div> -->
+            <!-- <div class="col-3">
               <img src="images/google-maps-marker.png" class="img-fluid"/>
               <h5>Location Verification</h5>
-            </div>
-            <div class="col-3">
+            </div> -->
+            <!-- <div class="col-3">
               <img src="images/box.png" height="100" class="img-fluid"/>
               <h5>Inventory Control</h5>
-            </div>
+            </div> -->
           </div>
         </div>
       </div>
