--- a/pages/progress.html
+++ b/pages/progress.html
@@ -42,8 +42,37 @@
             </div>
         </nav>
         <div class="container-fluid">
-            <div class="row d-flex justify-content-around text-center">
-                <h2>No progress updates yet! Check back soon...</h2>
+            <div class="row d-flex justify-content-around text-center py-3">
+                <h4>Below is a list of documents tracking the app's progress throughout the semester</h4>
+            </div>
+            <div class="row d-flex justify-content-around text-center py-3">
+                <h3><a href="../documents/ProjectBacklog.xlsx">Project Backlog</a></h3>
+            </div>
+            <div class="row d-flex justify-content-around text-center py-3">
+                <h2>Sprint 1</h2>
+                <ul class="list-group">
+                    <li class="list-group-item"><a href="../documents/sprint1/DailyMeeting.pdf">Daily Meetings</a></li>
+                    <li class="list-group-item"><a href="../documents/sprint1/Sprint1GoalBacklog.pdf">Goal Backlog</a></li>
+                    <li class="list-group-item"><a href="../documents/sprint1/Sprint1Retrospective.pdf">Retrospective</a></li>
+                </ul>
+            </div>
+            <div class="row d-flex justify-content-around text-center py-3">
+                <h2>Sprint 2</h2>
+                <ul class="list-group">
+                    <li class="list-group-item"><a href="../documents/sprint2/DailyMeeting.pdf">Daily Meetings</a></li>
+                    <li class="list-group-item"><a href="../documents/sprint2/Sprint2GoalBacklog.pdf">Goal Backlog</a></li>
+                    <li class="list-group-item"><a href="../documents/sprint2/Sprint2Retrospective.pdf">Retrospective</a></li>
+                    <li class="list-group-item"><a href="../documents/sprint2/TESVerify - Jones_Lucas_McLeroy_Neubrander.pdf">Presentation Slides</a></li>
+                </ul>
+            </div>
+            <div class="row d-flex justify-content-around text-center py-3">
+                <h2>Sprint 3</h2>
+                <ul class="list-group">
+                    <li class="list-group-item"><a href="../documents/sprint3/DailyMeeting.pdf">Daily Meetings</a></li>
+                    <li class="list-group-item"><a href="../documents/sprint3/Sprint3GoalBacklog.pdf">Goal Backlog</a></li>
+                    <li class="list-group-item"><a href="../documents/sprint3/Sprint3Retrospective.pdf">Retrospective</a></li>
+                    <li class="list-group-item"><a href="../documents/sprint3/TESVerify - Jones_Lucas_McLeroy_Neubrander.pdf">Presentation Slides</a></li>
+                </ul>
             </div>
         </div>
     </body>
