add to download page

--- a/pages/download.html
+++ b/pages/download.html
@@ -4,6 +4,7 @@
         <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+        <link rel="stylesheet" href="../styles/download.css" />
     </head>
     <body>
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -42,8 +43,15 @@
             </div>
         </nav>
         <div class="container-fluid">
-            <div class="row d-flex justify-content-around text-center">
-                <h2>No download info yet! Check back soon...</h2>
+            <div class="justify-content-around text-center">
+                <h2>Download our app on the app store! (Coming soon)</h2>
+                <h2><a href="https://expo.io/@bslucas/projects/tes_verify">Or check out our app on Expo!</a></h2>
+                <div class="row d-flex justify-content-around text-center py-3">
+                    <img class="image" src="../images/tes-puppy.png" />
+                    <img class="image" src="../images/tes-signin.png" />
+                    <img class="image" src="../images/tes-clockins.png" />
+                    <img class="image" src="../images/tes-welcome.png" />
+                </div>
             </div>
         </div>
     </body>
