--- a/pages/progress.html
+++ b/pages/progress.html
@@ -46,6 +46,9 @@
                 <h4>Below is a list of documents tracking the app's progress throughout the semester</h4>
             </div>
             <div class="row d-flex justify-content-around text-center py-3">
+                <h3><a href="https://github.com/TemporaryEmergencyServices/tes_verify">Source code on Github</a></h3>
+            </div>
+            <div class="row d-flex justify-content-around text-center py-3">
                 <h3><a href="../documents/ProjectBacklog.xlsx">Project Backlog</a></h3>
             </div>
             <div class="row d-flex justify-content-around text-center py-3">
