Added sprint 1 presentation to website

--- a/pages/progress.html
+++ b/pages/progress.html
@@ -57,6 +57,7 @@
                     <li class="list-group-item"><a href="../documents/sprint1/DailyMeeting.pdf">Daily Meetings</a></li>
                     <li class="list-group-item"><a href="../documents/sprint1/Sprint1GoalBacklog.pdf">Goal Backlog</a></li>
                     <li class="list-group-item"><a href="../documents/sprint1/Sprint1Retrospective.pdf">Retrospective</a></li>
+                    <li class="list-group-item"><a href="../documents/sprint1/TESVerify - Jones_Lucas_McLeroy_Neubrander.pdf">Presentation Slides</a></li>
                 </ul>
             </div>
             <div class="row d-flex justify-content-around text-center py-3">
