--- a/pages/download.html
+++ b/pages/download.html
@@ -46,6 +46,7 @@
             <div class="justify-content-around text-center">
                 <h2>Download our app on the app store! (Coming soon)</h2>
                 <h2><a href="https://expo.io/@bslucas/projects/tes_verify">Or check out our app on Expo!</a></h2>
+                <h2><a download href="../documents/tes_verify_apk.apk">Or download the .apk file for Android!</a></h2>
                 <div class="row d-flex justify-content-around text-center py-3">
                     <img class="image" src="../images/tes-puppy.png" />
                     <img class="image" src="../images/tes-signin.png" />
