add privacy policy

--- a/index.html
+++ b/index.html
@@ -77,23 +77,8 @@
           </div>
             
             
-          <div class="row">
-            <!-- <div class="col-3">
-              <img src="images/sheet.png" class="img-fluid"/>
-              <h5>Clock-in/Clock-Out</h5>
-            </div> -->
-            <!-- <div class="col-3">
-              <img src="images/clipboard-checkmark.png" class="img-fluid"/>
-              <h5>Identity Verification</h5>
-            </div> -->
-            <!-- <div class="col-3">
-              <img src="images/google-maps-marker.png" class="img-fluid"/>
-              <h5>Location Verification</h5>
-            </div> -->
-            <!-- <div class="col-3">
-              <img src="images/box.png" height="100" class="img-fluid"/>
-              <h5>Inventory Control</h5>
-            </div> -->
+          <div class="row justify-content-center py-5">
+            <h3>Read our <a href="documents/tes-privacy-policy.html"> privacy policy</a></h3>
           </div>
         </div>
       </div>
